test/visibility/import/public/no-param-import.good
no-param-import.chpl:4: error: Can't 'import' without naming a module
