test/visibility/import/public/no-param-import.chpl
module Foo {
  param p: int = 3;

  public import p;
}
